feat: integrate HoaDonRemoteService for enhanced invoice handling and improve data loading with SwingWorker